gap fix

--- a/wp-content/themes/blankslate/scss/modals.scss
+++ b/wp-content/themes/blankslate/scss/modals.scss
@@ -23,6 +23,9 @@
         max-width: 100%;
         width: 100%;
     }
+    .form-wrap {
+        padding: 12px 20px 32px 20px;
+    }
 }
 
 .modal-backdrop.show{
